<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ConfirmActivity">

    <ImageView
        android:id="@+id/iv_confirm_preview"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/captured_photo" />

    <TextView
        android:id="@+id/tv_confirm_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_confirm_empid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/employee_id"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_confirm_inout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_inout"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_confirm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_confirm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bt_confirm_confirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bg"
        android:onClick="yesItIs"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/submit_attendance"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontFamily="sans-serif-medium" />

    <!--<ListView
        android:id="@+id/lv_confirm_attendances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

</LinearLayout>