<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:padding="16dp"
    tools:context=".SiteProxyEditActivity">

    <FrameLayout
        android:id="@+id/frame_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/et_siteproxy_others"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="110dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_bg"
            android:digits="0123456789.:"
            android:ems="10"
            android:hint="@string/enter_ip_address"
            android:inputType="number|numberDecimal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:fontFamily="sans-serif-light" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_siteproxy_rmcipayslip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/rmcipayslip_info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_siteproxy_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/others"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

                android:textColor="@color/white" />

        </RadioGroup>

    </FrameLayout>

    <Button
        android:id="@+id/bt_siteproxy_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_Layout"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:onClick="submitipaddress"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_siteproxy_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_siteproxy_submit"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/details"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>