<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_list_layout_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_row_item"
            android:padding="4dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_listlayout_civ"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@color/shimmer_bg"
                android:contentDescription="@string/employee_picture"
                android:src="@drawable/ic_person_outline_white_24dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_listlayout_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/iv_listlayout_civ"
                android:layout_toRightOf="@id/iv_listlayout_civ"
                android:background="@color/shimmer_bg"
                android:text="@string/fullname"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_listlayout_civ"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_listlayout_id"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_listlayout_fullname"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/iv_listlayout_civ"
                android:layout_toRightOf="@id/iv_listlayout_civ"
                android:background="@color/shimmer_bg"
                android:text="@string/employee_id"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_listlayout_civ"
                app:layout_constraintTop_toBottomOf="@+id/tv_listlayout_fullname" />

            <ImageView
                android:id="@+id/iv_listlayout_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_listlayout_fullname"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/tv_listlayout_id"
                android:layout_toRightOf="@id/tv_listlayout_id"
                android:src="@drawable/ic_more_horiz_white_24dp" />

            <TextView
                android:id="@+id/tv_listlayout_status"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_margin="8dp"
                android:background="@color/shimmer_bg"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="ABSENT"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_listlayout_fullname" />


        </RelativeLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>